tests/unit/guardrails/block-hostnetwork/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-hostnetwork-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: block-hostnetwork
    isValidatingPolicy: true
    kind: Pod
    resources:
      - good-pod
    result: pass
  - policy: block-hostnetwork
    isValidatingPolicy: true
    kind: Pod
    resources:
      - bad-pod-hostnetwork
    result: fail
